# PDF-ToolKit

./: README.md  pyproject.toml
.github/: release-template.md
.github/workflows/: release-windows.yml
docs/: enabling-llm.md  install-windows.md  run-from-source.md  sample-workflows.md  troubleshooting.md
installer/: pdf-toolkit.iss
scripts/: build_installer.ps1  export_app_icon.py  package_release.ps1
src/pdf_toolkit/: application.py  batch.py  cli.py  environment.py  gui.py  llm_analysis.py  llm_extract.py  workflow_templates.py
tests/: test_advanced_features.py  test_application_and_gui.py  test_cli_and_reports.py
